syntax = "proto3";

package com.manifoldfinance.protobuf.rpc;

import "eth.proto";
import "action.proto";

option java_multiple_files = true;
option cc_enable_arenas = true;

message TransactionHash {
  string transaction_hash = 2;
}

message SendTransactionKey {
  string signer_address = 1;
  string transaction_hash = 2;
}

message SendTransaction {
  string signer_address = 1;
  int64 received_at = 2;
  int64 deadline_at = 3;

  com.manifoldfinance.protobuf.eth.Transaction transaction = 4;

  oneof action {
    com.manifoldfinance.protobuf.action.SwapExactTokensForTokens swap_exact_tokens_for_tokens = 16;
    com.manifoldfinance.protobuf.action.SwapTokensForExactTokens swap_tokens_for_exact_tokens = 17;
    com.manifoldfinance.protobuf.action.SwapExactETHForTokens swap_exact_eth_for_tokens = 18;
    com.manifoldfinance.protobuf.action.SwapTokensForExactETH swap_tokens_for_exact_ETH = 19;
    com.manifoldfinance.protobuf.action.SwapExactTokensForETH swap_exact_tokens_for_ETH = 20;
    com.manifoldfinance.protobuf.action.SwapETHForExactTokens swap_eth_for_exact_tokens = 21;
    com.manifoldfinance.protobuf.action.SwapExactTokensForTokensSupportingFeeOnTransferTokens swap_exact_tokens_for_tokens_supporting_fee_on_transfer_tokens = 22;
    com.manifoldfinance.protobuf.action.SwapExactETHForTokensSupportingFeeOnTransferTokens swap_exact_eth_for_tokens_supporting_fee_on_transfer_tokens = 23;
    com.manifoldfinance.protobuf.action.SwapExactTokensForETHSupportingFeeOnTransferTokens swap_exact_tokens_for_eth_supporting_fee_on_transfer_tokens = 24;
  }
}
